# leaf-framework

./: .gitignore  CMakeLists.txt  README.md
backend/: CMakeLists.txt
backend/glfw/: CMakeLists.txt
backend/glfw/include/leaf/platform/backends/: glfw.hpp
backend/glfw/src/: CMakeLists.txt  glfw_platform.cpp
backend/vulkan/: CMakeLists.txt
backend/vulkan/include/: leaf-graphics-vulkan.hpp
backend/vulkan/include/leaf/graphics/backends/: vulkan.hpp
backend/vulkan/src/: CMakeLists.txt  object_allocator.hpp  vulkan_backend.cpp  vulkan_context.cpp  vulkan_context.hpp
backend/vulkan/src/resources/: CMakeLists.txt  command_buffer_vk.cpp  command_buffer_vk.hpp  framebuffer_vk.cpp  framebuffer_vk.hpp  queue_vk.cpp  queue_vk.hpp  resource.hpp  texture_vk.cpp  texture_vk.hpp  window_vk.cpp  window_vk.hpp
cmake/: AddFiles.cmake
example/: CMakeLists.txt
example/src/: CMakeLists.txt  main.cpp
include/graphics/: resource.hpp
leaf-backend/: CMakeLists.txt
leaf-backend/graphics/: CMakeLists.txt
leaf-backend/graphics/vulkan/: CMakeLists.txt
leaf-backend/graphics/vulkan/src/: CMakeLists.txt  leaf-graphics-vulkan.cpp  leaf-graphics-vulkan.hpp
leaf-backend/graphics/vulkan/src/leaf-graphics-vulkan/: CMakeLists.txt  core.cpp  core.hpp  resource_manager.hpp  window.cpp  window.hpp
leaf-backend/window/glfw/: CMakeLists.txt
leaf-backend/window/glfw/src/: CMakeLists.txt  leaf-window-glfw.cpp  leaf-window-glfw.hpp
reading_material/: coding_style.md  glossary.md  graphics.md
src/: CMakeLists.txt  foo.cpp
src/leaf/: CMakeLists.txt  export.hpp  graphics.hpp  graphics.md  leaf.cpp  leaf.hpp  native_window.cpp  native_window.hpp
src/leaf/core/: CMakeLists.txt  algorithm.hpp  array.hpp  cstddef.hpp  cstdlib.hpp  cstring.hpp  error.cpp  error.hpp  exception.hpp  expected.hpp  format.hpp  iostream.hpp  iterator.hpp  limits.hpp  memory.hpp  optional.hpp  span.hpp  string.hpp  type_name.hpp  types.hpp  utility.hpp  vector.hpp
src/leaf/graphics/: CMakeLists.txt  backend.cpp  backend.hpp  command_buffer.cpp  command_buffer.hpp  command_context.hpp  forward.hpp  framebuffer.cpp  framebuffer.hpp  graphics.md  queue.hpp  vertex_buffer.hpp  window.cpp  window.hpp
src/leaf/graphics/detail/: CMakeLists.txt  api.cpp  api.hpp  buffer.hpp  resource.hpp
src/leaf/math/: CMakeLists.txt  dim.hpp
src/leaf/platform/: CMakeLists.txt  api.cpp  api.hpp  desktop_glfw.cpp  window.hpp
tests/: CMakeLists.txt
tests/src/: iterator_tests.cpp
